--- a/src/view/ThanhPhan/NhanVienJpanel.form
+++ b/src/view/ThanhPhan/NhanVienJpanel.form
@@ -343,6 +343,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="txtMaNV">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel5">
               <Properties>
