--- a/src/view/ThanhPhan/KhuyenMaiJpanel.form
+++ b/src/view/ThanhPhan/KhuyenMaiJpanel.form
@@ -204,7 +204,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="18" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="M&#xe3; khuy&#x1ebf;n m&#xe3;i     :"/>
+                <Property name="text" type="java.lang.String" value="M&#xe3; khuy&#x1ebf;n m&#x1ea1;i     :"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="txtMa">
@@ -214,7 +214,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="18" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="T&#xea;n khuy&#x1ebf;n m&#xe3;i    :"/>
+                <Property name="text" type="java.lang.String" value="T&#xea;n khuy&#x1ebf;n m&#x1ea1;i    :"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="txtTen">
